<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.alberto.tellerium.screens.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.view.LoginActivity">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginBottom="60dp"
            app:cardCornerRadius="10dp"
            android:elevation="@dimen/sm"
            android:backgroundTint="@color/faintGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/md"
                    android:text="@string/login"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/md"
                    android:layout_marginTop="@dimen/md"
                    android:layout_marginRight="@dimen/md"
                    android:hint="@string/email"
                    app:errorMessage="@{ viewModel.emailError }">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={ viewModel.email }" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/md"
                    android:layout_marginTop="@dimen/sm"
                    android:layout_marginRight="@dimen/md"
                    android:hint="@string/password"
                    app:errorMessage="@{ viewModel.passwordError }"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={ viewModel.password }" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/sm"
                    android:text="@string/login"
                    android:textAllCaps="false" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>